CORE-2239 - Fixed scrollbar be obscured by the footer in full width mode

--- a/css/footer.less
+++ b/css/footer.less
@@ -18,7 +18,11 @@ permissions and limitations under the License.
         padding-bottom: 1em;
         padding-top: 1em;
         position: absolute;
-        right: 0;        
+        right: 0;
+    }
+
+    .footer-fixed-bottom.container-fluid {        
+        margin-right: 1.5em;
     }
 
     .footer-fixed-bottom:not(.container-fluid) {
@@ -27,8 +31,11 @@ permissions and limitations under the License.
     }
 
     .has-footer {
-        padding-bottom: 5em;
         overflow-y: scroll;
+    }
+
+    .has-footer > .main {
+        padding-bottom: 5em;
     }
 
     .footer-fixed-wrapper {
